samples/_failures_safe/1761320314_3249fb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_397033f8.c: In function ‘main’:
./samples/SAFE/__tmp_397033f8.c:185:5: error: expected declaration or statement at end of input
  185 |     printf("Adding nodes 0-5...\n");
      |     ^~~~~~
